# tupi

./: Cargo.toml  flake.nix  test.tupi
src/: main.rs
tree-sitter-tupi/: Cargo.toml  Makefile  Package.swift  binding.gyp  bun.lockb  grammar.js  package.json  pyproject.toml  setup.py
tree-sitter-tupi/bindings/c/: tree-sitter-tupi.pc.in
tree-sitter-tupi/bindings/go/: binding.go  binding_test.go  go.mod
tree-sitter-tupi/bindings/node/: binding.cc
tree-sitter-tupi/bindings/python/tree_sitter_tupi/: __init__.py  binding.c
tree-sitter-tupi/bindings/rust/: build.rs  lib.rs
tree-sitter-tupi/bindings/swift/TreeSitterTupi/: tupi.h
tree-sitter-tupi/examples/: test.tupi
tree-sitter-tupi/src/: .clang-format  grammar.json  node-types.json  parser.c  scanner.c
